// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SectionList Anchor 1`] = `
.c2 {
  background-color: transparent;
  -webkit-text-decoration-skip: objects;
  text-decoration-skip: objects;
  font-family: "Libre Franklin",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,Helvetica,sans-serif;
}

.c1 {
  color: rgb(59,70,204);
  -webkit-text-fill-color: currentcolor;
}

.c1:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 {
  color: rgb(70,70,70);
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
}

.c0.active {
  color: rgb(59,70,204);
  cursor: default;
}

<a
  className="c0 c1 c2"
>
  Instances
</a>
`;

exports[`SectionList Anchor 2`] = `
.c2 {
  background-color: transparent;
  -webkit-text-decoration-skip: objects;
  text-decoration-skip: objects;
  font-family: "Libre Franklin",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,Helvetica,sans-serif;
}

.c1 {
  color: rgb(59,70,204);
  -webkit-text-fill-color: currentcolor;
}

.c1:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 {
  color: rgb(70,70,70);
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  color: rgb(59,70,204);
  cursor: default;
}

.c0.active {
  color: rgb(59,70,204);
  cursor: default;
}

<a
  className="c0 c1 c2"
>
  Instances
</a>
`;

exports[`SectionList Item 1`] = `
.c3 {
  background-color: transparent;
  -webkit-text-decoration-skip: objects;
  text-decoration-skip: objects;
  font-family: "Libre Franklin",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,Helvetica,sans-serif;
}

.c2 {
  color: rgb(59,70,204);
  -webkit-text-fill-color: currentcolor;
}

.c2:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 {
  display: inline-block;
  font-size: 0.9375rem;
  line-height: 1.6;
  margin-right: 1.4375rem;
}

.c1 {
  color: rgb(70,70,70);
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
}

.c1.active {
  color: rgb(59,70,204);
  cursor: default;
}

<li
  className="c0"
>
  <a
    className="c1 c2 c3"
  >
    Instances
  </a>
</li>
`;

exports[`SectionList SectionList 1`] = `
.c4 {
  background-color: transparent;
  -webkit-text-decoration-skip: objects;
  text-decoration-skip: objects;
  font-family: "Libre Franklin",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,Helvetica,sans-serif;
}

.c3 {
  color: rgb(59,70,204);
  -webkit-text-fill-color: currentcolor;
}

.c3:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1 {
  display: inline-block;
  font-size: 0.9375rem;
  line-height: 1.6;
  margin-right: 1.4375rem;
}

.c2 {
  color: rgb(70,70,70);
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  color: rgb(59,70,204);
  cursor: default;
}

.c2.active {
  color: rgb(59,70,204);
  cursor: default;
}

.c5 {
  color: rgb(70,70,70);
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
}

.c5.active {
  color: rgb(59,70,204);
  cursor: default;
}

.c0 {
  list-style-type: none;
  padding: 0;
  margin: 1.125rem 0 0 0;
}

<ul
  className="c0"
>
  <li
    className="c1"
  >
    <a
      className="c2 c3 c4"
    >
      Overview
    </a>
  </li>
  <li
    className="c1"
  >
    <a
      className="c5 c3 c4"
    >
      Services
    </a>
  </li>
  <li
    className="c1"
  >
    <a
      className="c5 c3 c4"
    >
      Instances
    </a>
  </li>
</ul>
`;
